--- a/privacy.html
+++ b/privacy.html
@@ -1,8 +1,88 @@
 <!DOCTYPE html>
-<html>
-  <head><title>Privacy Policy</title></head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - TikTok Video Scheduler</title>
+    <style>
+        body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; line-height: 1.6; }
+        h1 { color: #333; }
+        h2 { color: #555; margin-top: 30px; }
+        .contact-info { background-color: #f5f5f5; padding: 15px; border-radius: 5px; margin-top: 20px; }
+    </style>
+</head>
+<body>
     <h1>Privacy Policy</h1>
-    <p>This application does not collect, store, or share any personal information beyond what is required for authentication with TikTok APIs.</p>
-  </body>
+    <p><strong>Last Updated:</strong> September 20, 2025</p>
+    <p><strong>Effective Date:</strong> September 20, 2025</p>
+
+    <h2>1. Overview</h2>
+    <p>This Privacy Policy describes how the TikTok Video Scheduler application ("the App", "we", "us", or "our") handles information when you use our video scheduling service. This application is designed for private use and integrates with TikTok's API services.</p>
+
+    <h2>2. Information We Process</h2>
+    <p>The App processes the following types of information:</p>
+    <ul>
+        <li><strong>Authentication Data:</strong> OAuth tokens and credentials required for TikTok API access</li>
+        <li><strong>Video Content:</strong> Video files and associated metadata (titles, descriptions, tags) that you upload for scheduling</li>
+        <li><strong>Scheduling Data:</strong> Dates, times, and publishing preferences you set for your content</li>
+        <li><strong>TikTok Account Information:</strong> Basic account information retrieved through TikTok's API for authentication purposes</li>
+    </ul>
+
+    <h2>3. How We Handle Your Information</h2>
+    <ul>
+        <li><strong>Local Processing:</strong> All video processing and scheduling operations occur locally on your device</li>
+        <li><strong>No Permanent Storage:</strong> We do not permanently store your personal information, video content, or TikTok data</li>
+        <li><strong>Temporary Processing:</strong> Information is only held in memory during active application sessions</li>
+        <li><strong>TikTok Integration:</strong> Data is transmitted directly to TikTok's servers in accordance with your scheduling preferences</li>
+    </ul>
+
+    <h2>4. Third-Party Services</h2>
+    <p>This application integrates with:</p>
+    <ul>
+        <li><strong>TikTok API:</strong> For authentication and content publishing. Your use of TikTok services is governed by <a href="https://www.tiktok.com/legal/privacy-policy">TikTok's Privacy Policy</a></li>
+        <li><strong>No Other Services:</strong> We do not integrate with any other third-party services or analytics platforms</li>
+    </ul>
+
+    <h2>5. Data Security</h2>
+    <p>We implement appropriate technical and security measures including:</p>
+    <ul>
+        <li>Secure OAuth 2.0 authentication flow</li>
+        <li>HTTPS encryption for all API communications</li>
+        <li>No persistent storage of sensitive authentication tokens</li>
+        <li>Regular security updates and dependency management</li>
+    </ul>
+
+    <h2>6. Your Rights (UK GDPR)</h2>
+    <p>Under UK data protection law, you have the right to:</p>
+    <ul>
+        <li>Request information about how your personal data is processed</li>
+        <li>Request correction of inaccurate personal data</li>
+        <li>Request deletion of your personal data</li>
+        <li>Object to processing of your personal data</li>
+        <li>Request restriction of processing</li>
+        <li>Data portability</li>
+    </ul>
+    <p>Since we do not permanently store personal data, most requests are automatically fulfilled by the application's design.</p>
+
+    <h2>7. Children's Privacy</h2>
+    <p>This application is not intended for use by individuals under 18 years of age. We do not knowingly process personal information from children.</p>
+
+    <h2>8. Changes to This Policy</h2>
+    <p>We may update this Privacy Policy from time to time. Changes will be reflected by updating the "Last Updated" date above. Continued use of the application after changes constitutes acceptance of the revised policy.</p>
+
+    <h2>9. Legal Basis for Processing (UK GDPR)</h2>
+    <p>Our legal basis for processing personal data is:</p>
+    <ul>
+        <li><strong>Legitimate Interest:</strong> To provide the video scheduling functionality you request</li>
+        <li><strong>Consent:</strong> Your explicit consent when authenticating with TikTok services</li>
+    </ul>
+
+    <div class="contact-info">
+        <h2>10. Contact Information</h2>
+        <p>For privacy-related questions or requests, please contact us:</p>
+        <p><strong>GitHub:</strong> [Your GitHub Username]<br>
+        <strong>Location:</strong> United Kingdom</p>
+        <p>You also have the right to lodge a complaint with the UK Information Commissioner's Office (ICO) if you believe your data protection rights have been violated.</p>
+    </div>
+</body>
 </html>
