--- a/terms.html
+++ b/terms.html
@@ -1,8 +1,131 @@
 <!DOCTYPE html>
-<html>
-  <head><title>Terms of Service</title></head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service - TikTok Video Scheduler</title>
+    <style>
+        body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; line-height: 1.6; }
+        h1 { color: #333; }
+        h2 { color: #555; margin-top: 30px; }
+        .important { background-color: #fff3cd; padding: 15px; border-radius: 5px; border-left: 4px solid #ffc107; margin: 20px 0; }
+        .contact-info { background-color: #f5f5f5; padding: 15px; border-radius: 5px; margin-top: 20px; }
+    </style>
+</head>
+<body>
     <h1>Terms of Service</h1>
-    <p>This application is for testing purposes only. By using it, you agree that no guarantees are provided and it is used at your own risk.</p>
-  </body>
+    <p><strong>Last Updated:</strong> September 20, 2025</p>
+    <p><strong>Effective Date:</strong> September 20, 2025</p>
+
+    <h2>1. Acceptance of Terms</h2>
+    <p>By accessing or using the TikTok Video Scheduler application ("the App", "Service"), you agree to be bound by these Terms of Service ("Terms"). If you do not agree to these Terms, do not use the Service.</p>
+
+    <h2>2. Description of Service</h2>
+    <p>The App is a video scheduling tool that allows users to:</p>
+    <ul>
+        <li>Upload and schedule video content for publication to TikTok</li>
+        <li>Manage video metadata including titles, descriptions, and tags</li>
+        <li>Configure publishing preferences and timing</li>
+        <li>Authenticate with TikTok services through OAuth 2.0</li>
+    </ul>
+
+    <div class="important">
+        <h2>3. Private Use Application</h2>
+        <p><strong>Important:</strong> This application is designed for private, personal use only. Access is limited to authorized users through controlled authentication mechanisms. The application is not intended for commercial distribution or public use.</p>
+    </div>
+
+    <h2>4. User Responsibilities</h2>
+    <p>By using this Service, you agree to:</p>
+    <ul>
+        <li><strong>Comply with TikTok's Terms:</strong> All content uploaded and scheduled through this application must comply with <a href="https://www.tiktok.com/legal/terms-of-service">TikTok's Terms of Service</a> and Community Guidelines</li>
+        <li><strong>Own Your Content:</strong> Ensure you have all necessary rights, licenses, and permissions for any content you upload</li>
+        <li><strong>Lawful Use:</strong> Use the Service only for lawful purposes in accordance with applicable UK and international laws</li>
+        <li><strong>Account Security:</strong> Maintain the security of your TikTok authentication credentials</li>
+        <li><strong>No Harmful Content:</strong> Not upload or schedule content that is illegal, harmful, threatening, abusive, defamatory, or otherwise objectionable</li>
+    </ul>
+
+    <h2>5. Prohibited Uses</h2>
+    <p>You may not use this Service to:</p>
+    <ul>
+        <li>Violate any applicable laws or regulations</li>
+        <li>Infringe upon intellectual property rights of others</li>
+        <li>Upload malicious software or attempt to harm the Service</li>
+        <li>Circumvent any access restrictions or authentication mechanisms</li>
+        <li>Use the Service for spam, harassment, or other malicious activities</li>
+        <li>Reverse engineer, decompile, or attempt to extract source code</li>
+        <li>Share access credentials with unauthorized third parties</li>
+    </ul>
+
+    <h2>6. Intellectual Property</h2>
+    <ul>
+        <li><strong>Your Content:</strong> You retain ownership of all content you upload. By using the Service, you grant us a limited license to process your content solely for the purpose of providing the scheduling functionality</li>
+        <li><strong>Application Code:</strong> The application source code and documentation are provided under the terms specified in the project repository</li>
+        <li><strong>Third-Party Content:</strong> TikTok and related trademarks are property of their respective owners</li>
+    </ul>
+
+    <h2>7. Disclaimers and Limitations of Liability</h2>
+    <div class="important">
+        <p><strong>USE AT YOUR OWN RISK:</strong> This application is provided "as is" without warranties of any kind, either express or implied. We do not guarantee:</p>
+        <ul>
+            <li>Uninterrupted or error-free operation</li>
+            <li>Successful publication of scheduled content</li>
+            <li>Compatibility with all TikTok API changes</li>
+            <li>Data backup or recovery services</li>
+        </ul>
+    </div>
+
+    <p><strong>Limitation of Liability:</strong> To the maximum extent permitted by UK law, we shall not be liable for any indirect, incidental, special, or consequential damages, including but not limited to:</p>
+    <ul>
+        <li>Loss of data or content</li>
+        <li>Business interruption</li>
+        <li>Loss of profits or revenue</li>
+        <li>TikTok account suspension or termination</li>
+        <li>Third-party service failures</li>
+    </ul>
+
+    <h2>8. Third-Party Services</h2>
+    <p>This application integrates with TikTok's API services. Your use of TikTok is governed by their separate terms and policies. We are not responsible for:</p>
+    <ul>
+        <li>TikTok's service availability or performance</li>
+        <li>Changes to TikTok's API or policies</li>
+        <li>TikTok's content moderation decisions</li>
+        <li>TikTok account issues or restrictions</li>
+    </ul>
+
+    <h2>9. Service Availability</h2>
+    <p>We make no guarantees about service availability, uptime, or continued operation. The Service may be:</p>
+    <ul>
+        <li>Temporarily unavailable due to maintenance or technical issues</li>
+        <li>Modified or discontinued at any time without notice</li>
+        <li>Affected by changes to third-party APIs or services</li>
+    </ul>
+
+    <h2>10. Privacy</h2>
+    <p>Your privacy is important to us. Please review our <a href="privacy-policy.html">Privacy Policy</a> to understand how we handle information in connection with the Service.</p>
+
+    <h2>11. Modifications to Terms</h2>
+    <p>We reserve the right to modify these Terms at any time. Changes will be effective immediately upon posting. Your continued use of the Service after changes constitutes acceptance of the modified Terms.</p>
+
+    <h2>12. Termination</h2>
+    <p>We may terminate or suspend access to the Service immediately, without prior notice, for any reason, including breach of these Terms. Upon termination:</p>
+    <ul>
+        <li>Your right to use the Service ceases immediately</li>
+        <li>Any scheduled content may not be published</li>
+        <li>You must discontinue all use of the Service</li>
+    </ul>
+
+    <h2>13. Governing Law</h2>
+    <p>These Terms are governed by the laws of England and Wales. Any disputes shall be subject to the exclusive jurisdiction of the courts of England and Wales.</p>
+
+    <h2>14. Severability</h2>
+    <p>If any provision of these Terms is found to be unenforceable, the remaining provisions shall remain in full force and effect.</p>
+
+    <div class="contact-info">
+        <h2>15. Contact Information</h2>
+        <p>For questions about these Terms of Service, please contact us:</p>
+        <p><strong>GitHub:</strong> [Your GitHub Username]<br>
+        <strong>Location:</strong> United Kingdom</p>
+        <p>These Terms of Service were last updated on the date indicated above.</p>
+    </div>
+</body>
 </html>
